Added some divs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
 <title>Title</title>
 </head>
 <body>
+
 <div>
-<p>Hej</p>
+    <p>Hej</p>
 </div>
+
+<div>
+    <p>Hej</p>
+</div>
+
+<div>
+    <p>Hej</p>
+</div>
+
 </body>
 </html>
