--- a/index.html
+++ b/index.html
@@ -4,18 +4,8 @@
 <title>Title</title>
 </head>
 <body>
-
 <div>
-    <p>Hej</p>
+    <p>Loding...</p>
 </div>
-
-<div>
-    <p>Hej</p>
-</div>
-
-<div>
-    <p>Hej</p>
-</div>
-
 </body>
 </html>
