--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<style>
+    body {
+        background-color: black;
+    }
+    p {
+        color: white;
+        font-size: 200%;
+    }
+</style>
 <!DOCTYPE html>
 <html>
 <head>
