--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <style>
-    body {
-        background-color: black;
+    div {
+        background-color: silver;
+        padding: 10px;
+        margin: 100px;
+        border-radius: 5px;
     }
-    p {
-        color: white;
-        font-size: 200%;
+    body {
+        background: linear-gradient(35deg, #ffcccc, #aaffff);
     }
 </style>
 <!DOCTYPE html>
