--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
-<style>
-    div {
-        background-color: silver;
-        padding: 10px;
-        margin: 100px;
-        border-radius: 5px;
-    }
-    body {
-        background: linear-gradient(35deg, #ffcccc, #aaffff);
-    }
-</style>
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Title</title>
+    <link rel="stylesheet" href="css/base.css">
+    </link>
+    <link rel="stylesheet" href="css/navbar.css">
+    </link>
+    <script src="js/base.js"></script>
+    <script src="js/navbar.js"></script>
 </head>
+
 <body>
-<div>
-    <p>Loding...</p>
-</div>
+
+    <div id="myNavbar" class="navbar">
+    </div>
+
+    <div class="Rubric">
+        <div id="intro">
+            <h1>Highway Run</h1>
+            <p></p>
+        </div>
+        <div>
+            <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon" alt="Picture of the player car from the game">
+        </div>
+    </div>
+
+    <div class="text">
+        <h2>About</h2>
+        <p></p>
+        <h2>Pictures</h2>
+        <img>
+    </div>
+
 </body>
+
 </html>
