--- a/Download.html
+++ b/Download.html
@@ -8,33 +8,62 @@
     </link>
     <script src="js/base.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <div id="myNavbar" class="navbar">
+    <div id="myNavbar" class="navbar" data-aos="fade-down">
     </div>
 
     <div class="Rubric">
-        <div id="intro">
+        <div id="intro" data-aos="zoom-in">
             <h1>Downloads</h1>
         </div>
     </div>
 
-    <div class="text">
-        <h2>Windows</h2>
-        <p>.exe</p>
-        <h2>Android</h2>
-        <p>.apk</p>
+    <div class="text" id="downloads"data-aos="zoom-in">
+        <div style="grid-area:windows;">
+            <h2>Windows</h2>
+            <p>Windows x64</p>
+            <button>Download .exe</button>
+            <p>Windowns x32</p>
+            <button>Download .exe</button>
+        </div>
+        <div style="grid-area:android;">
+            <h2>Android</h2>
+            <button>Download .apk</button>
+        </div>
+        <div style="grid-area:linux;">
+            <h2>Linux</h2>
+            <button>Download</button>
+        </div>
+        <div style="grid-area:ios;">
+            <h2>IOS</h2>
+            <p>Unavailable</p>
+        </div>
     </div>
     
-    <div class="text">
+    <div class="text" data-aos="fade-up">
         <h2>Update Log</h2>
         <h3>v1.1</h3>
-        <p></p>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         <h3>v1.0</h3>
-        <p></p>
+            <ul>
+                <li>First release</li>
+            </ul>
     </div>
+
+
+    <script>
+        AOS.init();
+      </script>
+
 
 </body>
 
