--- a/index.html
+++ b/index.html
@@ -8,29 +8,35 @@
     </link>
     <script src="js/base.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <div id="myNavbar" class="navbar">
+    <div id="myNavbar" class="navbar" data-aos="fade-down">
     </div>
 
     <div class="Rubric">
-        <div id="intro">
+        <div id="intro" data-aos="fade-right">
             <h1>Highway Run</h1>
             <p></p>
         </div>
-        <div>
+        <div data-aos="fade-left">
             <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon" alt="Picture of the player car from the game">
         </div>
     </div>
 
-    <div class="text">
+    <div class="text" data-aos="fade-up">
         <h2>About</h2>
         <p></p>
         <h2>Pictures</h2>
         <img>
     </div>
+
+    <script>
+        AOS.init();
+      </script>
 
 </body>
 
