--- a/play.html
+++ b/play.html
@@ -18,6 +18,8 @@
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebSpel.json", {onProgress: UnityProgress});
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,5 +43,10 @@
       </div>
     </div>
 
+    <script>
+      AOS.init();
+    </script>
+
+    
 </body>
 </html>
