Added some working download links and made some other changes

--- a/Download.html
+++ b/Download.html
@@ -18,40 +18,46 @@
     </div>
 
     <div class="Rubric">
-        <div id="intro" data-aos="zoom-in">
+        <div id="intro" data-aos="zoom-out">
             <h1>Downloads</h1>
         </div>
     </div>
 
-    <div class="text" id="downloads"data-aos="zoom-in">
+    <div class="text" id="downloads"data-aos="fade-up">
+
         <div style="grid-area:windows;">
             <h2>Windows</h2>
             <p>Windows x64</p>
-            <button>Download .exe</button>
+            <a href="recources/Highway_Run_setup(x64).exe" download>
+                <button>Download</button></a>
+            <p>Outdated</p>
             <p>Windowns x32</p>
-            <button>Download .exe</button>
+            <button>Unavailable</button>
         </div>
+
         <div style="grid-area:android;">
             <h2>Android</h2>
-            <button>Download .apk</button>
+            <a href="recources/HighwayRun_0.3.apk" download><button>Download .apk</button></a>
         </div>
+
         <div style="grid-area:linux;">
             <h2>Linux</h2>
-            <button>Download</button>
+            <button>Unavailable</button>
         </div>
+
         <div style="grid-area:ios;">
             <h2>IOS</h2>
-            <p>Unavailable</p>
+            <button>Unavailable</button>
         </div>
     </div>
     
-    <div class="text" data-aos="fade-up">
+    <div class="text" data-aos="fade-right">
         <h2>Update Log</h2>
         <h3>v1.1</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Added support for android</li>
+                <li>The game now supports tuch controls</li>
+                <li>UI changes to support tuch</li>
             </ul>
         <h3>v1.0</h3>
             <ul>
