--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>About</h2>
         <p></p>
         <h2>Pictures</h2>
-        <img>
+        <img src="recources/wolf-5120x2560-forest-nightmare-hd-5k-16854.jpg" style="width:70vw;" id="bildspel">
     </div>
 
     <script>
