--- a/Download.html
+++ b/Download.html
@@ -29,8 +29,7 @@
             <h2>Windows</h2>
             <p>Windows x64</p>
             <a href="recources/Highway_Run_setup(x64).exe" download>
-                <button>Download</button></a>
-            <p>Outdated</p>
+                <button>Download Outdated</button></a>
             <p>Windowns x32</p>
             <button>Unavailable</button>
         </div>
@@ -42,11 +41,6 @@
 
         <div style="grid-area:linux;">
             <h2>Linux</h2>
-            <button>Unavailable</button>
-        </div>
-
-        <div style="grid-area:ios;">
-            <h2>IOS</h2>
             <button>Unavailable</button>
         </div>
     </div>
