added slide show

--- a/Download.html
+++ b/Download.html
@@ -29,14 +29,14 @@
             <h2>Windows</h2>
             <p>Windows x64</p>
             <a href="recources/Highway_Run_setup(x64).exe" download>
-                <button>Download Outdated</button></a>
+                <button>Download v1.0</button></a>
             <p>Windowns x32</p>
             <button>Unavailable</button>
         </div>
 
         <div style="grid-area:android;">
             <h2>Android</h2>
-            <a href="recources/HighwayRun_0.3.apk" download><button>Download .apk</button></a>
+            <a href="recources/HighwayRun_0.3.apk" download><button>Download v1.1</button></a>
         </div>
 
         <div style="grid-area:linux;">
@@ -52,6 +52,8 @@
                 <li>Added support for android</li>
                 <li>The game now supports tuch controls</li>
                 <li>UI changes to support tuch</li>
+                <li>Added ability to save and load highscores</li>
+                <li>Added separate highscores for each difficulty</li>
             </ul>
         <h3>v1.0</h3>
             <ul>
