--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </link>
     <link rel="stylesheet" href="css/navbar.css">
     </link>
-    <script src="js/base.js"></script>
+
     <script src="js/navbar.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -23,7 +23,8 @@
             <p></p>
         </div>
         <div data-aos="fade-left">
-            <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon" alt="Picture of the player car from the game">
+            <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon"
+                alt="Picture of the player car from the game">
         </div>
     </div>
 
@@ -31,13 +32,15 @@
         <h2>About</h2>
         <p></p>
         <h2>Pictures</h2>
-        <img src="recources/wolf-5120x2560-forest-nightmare-hd-5k-16854.jpg" style="width:70vw;" id="bildspel">
+        <img src="" style="width:70vw;" id="img">
+        <button id="btnPrev">&#60</button>
+        <button id="btnNext">&#62</button>
     </div>
 
     <script>
         AOS.init();
-      </script>
-
+    </script>
+    <script src="js/base.js"></script>
 </body>
 
 </html>
