Changes to slideshow and download links

--- a/Download.html
+++ b/Download.html
@@ -29,19 +29,16 @@
             <h2>Windows</h2>
             <p>Windows x64</p>
             <a href="recources/Highway_Run_setup(x64).exe" download>
-                <button>Download v1.0</button></a>
+                <button>Download</button></a>
             <p>Windowns x32</p>
-            <button>Unavailable</button>
+            <a href="recources/Highway_Run_Setup(x32).exe" download>
+                <button>Download</button></a>
         </div>
 
         <div style="grid-area:android;">
             <h2>Android</h2>
-            <a href="recources/HighwayRun_0.3.apk" download><button>Download v1.1</button></a>
-        </div>
-
-        <div style="grid-area:linux;">
-            <h2>Linux</h2>
-            <button>Unavailable</button>
+            <a href="recources/HighwayRun_0.3.apk" download>
+                <button>Download .apk</button></a>
         </div>
     </div>
     
