Finished slideshow and styling of last page

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </div>
 
     <div class="text" data-aos="fade-up">
-        <h2>About</h2>
-        <p></p>
         <h2>Pictures</h2>
-        <img src="" style="width:70vw;" id="img">
-        <button id="btnPrev">&#8249</button>
-        <button id="btnNext">&#8250</button>
+        <div id="slideShow">
+            <img src="" id="img">
+            <button id="btnPrev" class="imgBtn" style="grid-area: btnPrev;">&#8249</button>
+            <button id="btnNext" class="imgBtn" style="grid-area: btnNext;">&#8250</button>
+        </div>
     </div>
 
     <script>
