--- a/play.html
+++ b/play.html
@@ -24,18 +24,18 @@
 
 <body>
 
-    <div id="myNavbar" class="navbar">
+    <div id="myNavbar" class="navbar" data-aos="fade-down">
     </div>
 
-    <div class="Rubric">
+    <div class="Rubric" data-aos="fade-down">
         <div id="intro">
             <h1>Highway Run</h1>
             <p>v1.0</p>
         </div>
     </div>
 
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
+    <div class="webgl-content" data-aos="fade-up">
+      <div id="gameContainer"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
