--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 </head>
 
 <body>
-
+    <! All navbar code is based of code by William Viktorsson>
     <div id="myNavbar" class="navbar" data-aos="fade-down">
     </div>
 
     <div class="Rubric">
         <div id="intro" data-aos="fade-right">
             <h1>Highway Run</h1>
-            <p></p>
+            <p>Highway Run is a free to play simple game for <br>
+                android, windows and web browsers. The goal is to 
+                avoid other cars and get as far as you posibly can. <br>
+                Can you get further than your friends and set the 
+                highest highscore? 
+            </p>
         </div>
         <div data-aos="fade-left">
             <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon"
