Added accesability changed @media ...

--- a/Download.html
+++ b/Download.html
@@ -13,16 +13,16 @@
 
 <body>
 
-    <div id="myNavbar" class="navbar" data-aos="fade-down">
-    </div>
+    <nav id="myNavbar" class="navbar" data-aos="fade-down">
+    </nav>
 
     <div class="Rubric">
-        <div id="intro" data-aos="zoom-out">
+        <div id="intro" data-aos="fade-down">
             <h1>Downloads</h1>
         </div>
     </div>
 
-    <div class="text" id="downloads" data-aos="fade-up">
+    <div class="text" id="downloads" data-aos="zoom-out">
 
         <div style="grid-area:windows;">
             <h2>Windows</h2>
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="text" data-aos="fade-right">
+    <div class="text" data-aos="fade-up">
         <h2>Update Log</h2>
         <button type="button" class="collapsible">v1.1</button>
         <div class="content">
