--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <! All navbar code is based of code by William Viktorsson>
-    <div id="myNavbar" class="navbar" data-aos="fade-down">
-    </div>
+    <nav id="myNavbar" class="navbar" data-aos="fade-down">
+    </nav>
 
     <div class="Rubric">
         <div id="intro" data-aos="fade-right">
@@ -29,14 +29,14 @@
         </div>
         <div data-aos="fade-left">
             <img src="recources/Highway_Run_icon.png" id="Highway_Run_icon"
-                alt="Picture of the player car from the game">
+                alt="Picture of the game icon">
         </div>
     </div>
 
     <div class="text" data-aos="fade-up">
         <h2>Pictures</h2>
         <div id="slideShow">
-            <img src="" id="img">
+            <img src="" id="img" alt="Slideshow of pictures from the game">
             <button id="btnPrev" class="imgBtn" style="grid-area: btnPrev;">&#8249</button>
             <button id="btnNext" class="imgBtn" style="grid-area: btnNext;">&#8250</button>
         </div>
