--- a/play.html
+++ b/play.html
@@ -24,8 +24,8 @@
 
 <body>
 
-    <div id="myNavbar" class="navbar" data-aos="fade-down">
-    </div>
+    <nav id="myNavbar" class="navbar" data-aos="fade-down">
+    </nav>
 
     <div class="Rubric" data-aos="fade-down">
         <div id="intro">
