--- a/Download.html
+++ b/Download.html
@@ -27,23 +27,23 @@
         <div style="grid-area:windows;">
             <h2>Windows</h2>
             <p>Windows x64</p>
-            <a href="recources/Highway_Run_setup(x64).exe" download>
+            <a href="recources/Highway_Run_setup(x64).exe" id="winx64" download>
                 <button>Download</button></a>
             <p>Windowns x32</p>
-            <a href="recources/Highway_Run_Setup(x32).exe" download>
+            <a href="recources/Highway_Run_Setup(x32).exe" id="winx32" download>
                 <button>Download</button></a>
         </div>
 
         <div style="grid-area:android;">
             <h2>Android</h2>
-            <a href="recources/HighwayRun_0.3.apk" download>
+            <a href="recources/HighwayRun_0.3.apk" id="apk" download>
                 <button>Download .apk</button></a>
         </div>
     </div>
 
     <div class="text" data-aos="fade-up">
         <h2>Update Log</h2>
-        <button type="button" class="collapsible">v1.1</button>
+        <button type="button" class="collapsible" id="col2">v1.1</button>
         <div class="content">
             <ul>
                 <li>Added support for android</li>
@@ -53,7 +53,7 @@
                 <li>Added separate highscores for each difficulty</li>
             </ul>
         </div>
-        <button type="button" class="collapsible">v1.0</button>
+        <button type="button" class="collapsible" id="col1">v1.0</button>
         <div class="content">
             <ul>
                 <li>First release</li>
