Added about text

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <button id="btnPrev" class="imgBtn" style="grid-area: btnPrev;">&#8249</button>
             <button id="btnNext" class="imgBtn" style="grid-area: btnNext;">&#8250</button>
         </div>
+        <h2>About</h2>
+        <p>My name is Jonatan Wincent and I'm a 17 year old student at Maja Beskow High School in Sweden. 
+            I study the information and media technology program and I'm in my second year as of spring 2021. 
+            Highway Run is a game that I made during my first year at this school and this webbsite is a project from this year.</p>
     </div>
 
     <script>
