Changes to name of folder

--- a/Download.html
+++ b/Download.html
@@ -27,16 +27,16 @@
         <div style="grid-area:windows;">
             <h2>Windows</h2>
             <p>Windows x64</p>
-            <a href="recources/Highway_Run_setup(x64).exe" id="winx64" download>
+            <a href="resources/Highway_Run_setup(x64).exe" id="winx64" download>
                 <button>Download</button></a>
             <p>Windowns x32</p>
-            <a href="recources/Highway_Run_Setup(x32).exe" id="winx32" download>
+            <a href="resources/Highway_Run_Setup(x32).exe" id="winx32" download>
                 <button>Download</button></a>
         </div>
 
         <div style="grid-area:android;">
             <h2>Android</h2>
-            <a href="recources/HighwayRun_0.3.apk" id="apk" download>
+            <a href="resources/HighwayRun_0.3.apk" id="apk" download>
                 <button>Download .apk</button></a>
         </div>
     </div>
