Added page icon and name

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="icon" href="resources/Highway_Run_icon.png">
+    <title>Highway Run Home</title>
     <link rel="stylesheet" href="css/base.css">
     </link>
     <link rel="stylesheet" href="css/navbar.css">
