--- a/play.html
+++ b/play.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="icon" href="resources/Highway_Run_icon.png">
+    <title>Highway Run Play</title>
     <link rel="stylesheet" href="css/base.css">
     </link>
     <link rel="stylesheet" href="css/navbar.css">
@@ -9,7 +11,6 @@
     <script src="js/navbar.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Highway Run</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
