--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <button id="btnPrev" class="imgBtn" style="grid-area: btnPrev;">&#8249</button>
             <button id="btnNext" class="imgBtn" style="grid-area: btnNext;">&#8250</button>
         </div>
+    </div>
+    <div class="text" data-aos="fade-up">
         <h2>About</h2>
         <p>My name is Jonatan Wincent and I'm a 17 year old student at Maja Beskow High School in Sweden. 
             I study the information and media technology program and I'm in my second year as of spring 2021. 
